--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -1,108 +1,173 @@
 ---
-title: "About | Code Stitch Web Designs"
+title: "About | Coastal Edge Landscaping"
 description: "Meta description for the page"
 permalink: "/about/"
 ---
 
-{% extends "layouts/base.html" %}
+{% extends "layouts/base.html" %} {% block head %} <link rel="preload"
+as="image" href="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 640,
+height: 600 }) | avif %}"/> <link rel="preload" as="image" href="{% getUrl
+"/assets/images/cabinets.jpg" | resize({ width: 482, height: 536 }) | avif %}"/>
+<link
+  rel="stylesheet"
+  href="/assets/css/about.css" />
+{% endblock %} {% block body %}
 
-{% block head %}
-    <link rel="preload" as="image" href="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 640, height: 600 }) | avif %}"/>
-    <link rel="preload" as="image" href="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 482, height: 536 }) | avif %}"/>
-    <link rel="stylesheet" href="/assets/css/about.css">
-{% endblock %}
+<!-- ============================================ -->
+<!--                   Banner                     -->
+<!-- ============================================ -->
 
-{% block body %}
-
-    <!-- ============================================ -->
-    <!--                   Banner                     -->
-    <!-- ============================================ -->
-
-    <div id="banner-310">
-        <div class="cs-container">
-            <span class="cs-int-title">About Us</span>
-            <div class="cs-breadcrumbs">
-                <a href="/" class="cs-link">Home</a>
-                <a href="/about/" class="cs-link cs-active">About Us</a>
-            </div>
-        </div>
-        <!--Background Image-->
-        <picture class="cs-background">
-            <!--Mobile Image-->
-            <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 640, height: 600 }) | avif %}" type="image/avif">
-            <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 640, height: 600 }) | webp %}" type="image/webp">
-            <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 640, height: 600 }) | jpeg %}" type="image/jpeg">
-            <!--Tablet Image-->
-            <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 2048, height: 942 }) | avif %}" type="image/avif">
-            <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 2048, height: 942 }) | webp %}" type="image/webp">
-            <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 2048, height: 942 }) | jpeg %}" type="image/jpeg">
-            <!--Desktop Image-->
-            <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 2500, height: 628 }) | avif %}" type="image/avif">
-            <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 2500, height: 628 }) | webp %}" type="image/webp">
-            <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 2500, height: 628 }) | jpeg %}" type="image/jpeg">
-            <img src="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 2500, height: 628 }) | jpeg %}" alt="library" width="1920" height="482" loading="eager" decoding="async">
-        </picture>
+<div id="banner-310">
+  <div class="cs-container">
+    <span class="cs-int-title">About Us</span>
+    <div class="cs-breadcrumbs">
+      <a
+        href="/"
+        class="cs-link"
+        >Home</a
+      >
+      <a
+        href="/about/"
+        class="cs-link cs-active"
+        >About Us</a
+      >
     </div>
+  </div>
+  <!--Background Image-->
+  <picture class="cs-background">
+    <!--Mobile Image-->
+    <source media="(max-width: 600px)" srcset="{% getUrl
+    "/assets/images/cabinets.jpg" | resize({ width: 640, height: 600 }) | avif
+    %}" type="image/avif"> <source media="(max-width: 600px)" srcset="{% getUrl
+    "/assets/images/cabinets.jpg" | resize({ width: 640, height: 600 }) | webp
+    %}" type="image/webp"> <source media="(max-width: 600px)" srcset="{% getUrl
+    "/assets/images/cabinets.jpg" | resize({ width: 640, height: 600 }) | jpeg
+    %}" type="image/jpeg">
+    <!--Tablet Image-->
+    <source media="(max-width: 1024px)" srcset="{% getUrl
+    "/assets/images/cabinets.jpg" | resize({ width: 2048, height: 942 }) | avif
+    %}" type="image/avif"> <source media="(max-width: 1024px)" srcset="{% getUrl
+    "/assets/images/cabinets.jpg" | resize({ width: 2048, height: 942 }) | webp
+    %}" type="image/webp"> <source media="(max-width: 1024px)" srcset="{% getUrl
+    "/assets/images/cabinets.jpg" | resize({ width: 2048, height: 942 }) | jpeg
+    %}" type="image/jpeg">
+    <!--Desktop Image-->
+    <source media="(min-width: 1024px)" srcset="{% getUrl
+    "/assets/images/cabinets.jpg" | resize({ width: 2500, height: 628 }) | avif
+    %}" type="image/avif"> <source media="(min-width: 1024px)" srcset="{% getUrl
+    "/assets/images/cabinets.jpg" | resize({ width: 2500, height: 628 }) | webp
+    %}" type="image/webp"> <source media="(min-width: 1024px)" srcset="{% getUrl
+    "/assets/images/cabinets.jpg" | resize({ width: 2500, height: 628 }) | jpeg
+    %}" type="image/jpeg"> <img src="{% getUrl "/assets/images/cabinets.jpg" |
+    resize({ width: 2500, height: 628 }) | jpeg %}" alt="library" width="1920"
+    height="482" loading="eager" decoding="async">
+  </picture>
+</div>
 
-    <!-- ============================================ -->
-    <!--                 Side By Side                 -->
-    <!-- ============================================ -->
+<!-- ============================================ -->
+<!--                 Side By Side                 -->
+<!-- ============================================ -->
 
-    <section id="RPsbs-313">
-        <div class="cs-container">
-            <!-- Left Image Section -->
-            <div class="cs-image-group">
-                <picture class="cs-picture cs-picture1">
-                    <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 482, height: 536 }) | avif %}" type="image/avif">
-                    <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 482, height: 536 }) | webp %}" type="image/webp">
-                    <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 482, height: 536 }) | jpeg %}" type="image/jpeg">
-                    <!--Tablet Image-->
-                    <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 802, height: 892 }) | avif %}" type="image/avif">
-                    <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 802, height: 892 }) | webp %}" type="image/webp">
-                    <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 802, height: 892 }) | jpeg %}" type="image/jpeg">
-                    <!--Desktop Image-->
-                    <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 1044, height: 1162 }) | avif %}" type="image/avif">
-                    <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 1044, height: 1162 }) | webp %}" type="image/webp">
-                    <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 1044, height: 1162 }) | jpeg %}" type="image/jpeg">
-                    <img src="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 1044, height: 1162 }) | jpeg %}" alt="lawyers" width="522" height="581" decoding="async">
-                </picture>
-                <picture class="cs-picture cs-picture2">
-                    <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width: 366, height: 354 }) | avif %}" type="image/avif">
-                    <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width: 366, height: 354 }) | webp %}" type="image/webp">
-                    <source media="(max-width: 600px)" srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width: 366, height: 354 }) | jpeg %}" type="image/jpeg">
-                    <!--Tablet Image-->
-                    <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width: 600, height: 578 }) | avif %}" type="image/avif">
-                    <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width: 600, height: 578 }) | webp %}" type="image/webp">
-                    <source media="(max-width: 1024px)" srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width: 600, height: 578 }) | jpeg %}" type="image/jpeg">
-                    <!--Desktop Image-->
-                    <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width: 780, height: 752 }) | avif %}" type="image/avif">
-                    <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width: 780, height: 752 }) | webp %}" type="image/webp">
-                    <source media="(min-width: 1024px)" srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width: 780, height: 752 }) | jpeg %}" type="image/jpeg">
-                    <img src="{% getUrl "/assets/images/construction.jpg" | resize({ width: 780, height: 752 }) | jpeg %}" alt="gavel" width="390" height="376" loading="lazy" decoding="async">
-                </picture>
-            </div>
-            <!-- Right Content Section-->
-            <div class="cs-content">
-                <span class="cs-topper">About Us</span>
-                <h2 class="cs-title">About CodeStitch</h2>
-                <p class="cs-text">
-                    In consequat tincidunt turpis sit amet imperdiet. Praesent Class officelan nonatoureanor mauris laoreet, iaculis libero quis. Curabitur et tempus eri consequat tincidunt turpis sit amet imperdiet. Praesent nonatourean olei aptent taciti sociosqu ad litora torquent per.
-                </p>
-                <div class="cs-quote">
-                    <span class="cs-quote-text">
-                        In consequat tincidunt turpis sit amet imperdiet. Praesent Classei consequat tincidunt turpis sit amet imperdiet for mind.
-                    </span>
-                    <span class="cs-name">Justin Time</span>
-                    <span class="cs-job">CEO-Founder</span>
-                    <img class="cs-quote-icon" loading="lazy" decoding="async" src="/assets/svgs/quote.svg" alt="gavel" width="136" height="77">
-                </div>
-                <a href="/contact/" class="cs-button-solid">Get in Touch</a>
-            </div>
-        </div>
-    </section>
+<section id="RPsbs-313">
+  <div class="cs-container">
+    <!-- Left Image Section -->
+    <div class="cs-image-group">
+      <picture class="cs-picture cs-picture1">
+        <!--Mobile Image-->
+        <source media="(max-width: 600px)" srcset="{% getUrl
+        "/assets/images/cabinets.jpg" | resize({ width: 482, height: 536 }) |
+        avif %}" type="image/avif"> <source media="(max-width: 600px)"
+        srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 482,
+        height: 536 }) | webp %}" type="image/webp"> <source media="(max-width:
+        600px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({
+        width: 482, height: 536 }) | jpeg %}" type="image/jpeg">
+        <!--Tablet Image-->
+        <source media="(max-width: 1024px)" srcset="{% getUrl
+        "/assets/images/cabinets.jpg" | resize({ width: 802, height: 892 }) |
+        avif %}" type="image/avif"> <source media="(max-width: 1024px)"
+        srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 802,
+        height: 892 }) | webp %}" type="image/webp"> <source media="(max-width:
+        1024px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({
+        width: 802, height: 892 }) | jpeg %}" type="image/jpeg">
+        <!--Desktop Image-->
+        <source media="(min-width: 1024px)" srcset="{% getUrl
+        "/assets/images/cabinets.jpg" | resize({ width: 1044, height: 1162 }) |
+        avif %}" type="image/avif"> <source media="(min-width: 1024px)"
+        srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 1044,
+        height: 1162 }) | webp %}" type="image/webp"> <source media="(min-width:
+        1024px)" srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({
+        width: 1044, height: 1162 }) | jpeg %}" type="image/jpeg"> <img src="{%
+        getUrl "/assets/images/cabinets.jpg" | resize({ width: 1044, height:
+        1162 }) | jpeg %}" alt="lawyers" width="522" height="581"
+        decoding="async">
+      </picture>
+      <picture class="cs-picture cs-picture2">
+        <!--Mobile Image-->
+        <source media="(max-width: 600px)" srcset="{% getUrl
+        "/assets/images/construction.jpg" | resize({ width: 366, height: 354 })
+        | avif %}" type="image/avif"> <source media="(max-width: 600px)"
+        srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width:
+        366, height: 354 }) | webp %}" type="image/webp"> <source
+        media="(max-width: 600px)" srcset="{% getUrl
+        "/assets/images/construction.jpg" | resize({ width: 366, height: 354 })
+        | jpeg %}" type="image/jpeg">
+        <!--Tablet Image-->
+        <source media="(max-width: 1024px)" srcset="{% getUrl
+        "/assets/images/construction.jpg" | resize({ width: 600, height: 578 })
+        | avif %}" type="image/avif"> <source media="(max-width: 1024px)"
+        srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width:
+        600, height: 578 }) | webp %}" type="image/webp"> <source
+        media="(max-width: 1024px)" srcset="{% getUrl
+        "/assets/images/construction.jpg" | resize({ width: 600, height: 578 })
+        | jpeg %}" type="image/jpeg">
+        <!--Desktop Image-->
+        <source media="(min-width: 1024px)" srcset="{% getUrl
+        "/assets/images/construction.jpg" | resize({ width: 780, height: 752 })
+        | avif %}" type="image/avif"> <source media="(min-width: 1024px)"
+        srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width:
+        780, height: 752 }) | webp %}" type="image/webp"> <source
+        media="(min-width: 1024px)" srcset="{% getUrl
+        "/assets/images/construction.jpg" | resize({ width: 780, height: 752 })
+        | jpeg %}" type="image/jpeg"> <img src="{% getUrl
+        "/assets/images/construction.jpg" | resize({ width: 780, height: 752 })
+        | jpeg %}" alt="gavel" width="390" height="376" loading="lazy"
+        decoding="async">
+      </picture>
+    </div>
+    <!-- Right Content Section-->
+    <div class="cs-content">
+      <span class="cs-topper">About Us</span>
+      <h2 class="cs-title">About Coastal Edge Landscaping</h2>
+      <p class="cs-text">
+        Coastal Edge Landscaping is a locally owned Gold Coast business
+        specialising in residential landscaping, turf installation, paving, and
+        garden maintenance. We work closely with homeowners to create practical,
+        low-maintenance outdoor spaces that suit the coastal lifestyle and add
+        long-term value to their property.
+      </p>
+      <div class="cs-quote">
+        <span class="cs-quote-text">
+          We take pride in delivering quality workmanship, honest advice, and
+          outdoor spaces our clients can enjoy for years to come.
+        </span>
+        <span class="cs-name">Justin Bobley</span>
+        <span class="cs-job">Owner & Operator</span>
+        <img
+          class="cs-quote-icon"
+          loading="lazy"
+          decoding="async"
+          src="/assets/svgs/quote.svg"
+          alt="quote icon"
+          width="136"
+          height="77" />
+      </div>
+      <a
+        href="/about/"
+        class="cs-button-solid"
+        >About Us</a
+      >
+    </div>
+  </div>
+</section>
 
-    {% include 'sections/cta.html' %}
-
-{% endblock %}
+{% include 'sections/cta.html' %} {% endblock %}
