Added new images

--- a/src/index.html
+++ b/src/index.html
@@ -210,32 +210,32 @@ tags: "sitemap" # content/content.json will make sure that all pages in content/
       <picture class="cs-picture cs-picture2">
         <!--Mobile Image-->
         <source media="(max-width: 600px)" srcset="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 366, height: 354 })
+        "/assets/images/aboutus.jpg" | resize({ width: 366, height: 354 })
         | avif %}" type="image/avif"> <source media="(max-width: 600px)"
-        srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width:
+        srcset="{% getUrl "/assets/images/aboutus.jpg" | resize({ width:
         366, height: 354 }) | webp %}" type="image/webp"> <source
         media="(max-width: 600px)" srcset="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 366, height: 354 })
+        "/assets/images/aboutus.jpg" | resize({ width: 366, height: 354 })
         | jpeg %}" type="image/jpeg">
         <!--Tablet Image-->
         <source media="(max-width: 1024px)" srcset="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 600, height: 578 })
+        "/assets/images/aboutus.jpg" | resize({ width: 600, height: 578 })
         | avif %}" type="image/avif"> <source media="(max-width: 1024px)"
-        srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width:
+        srcset="{% getUrl "/assets/images/aboutus.jpg" | resize({ width:
         600, height: 578 }) | webp %}" type="image/webp"> <source
         media="(max-width: 1024px)" srcset="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 600, height: 578 })
+        "/assets/images/aboutus.jpg" | resize({ width: 600, height: 578 })
         | jpeg %}" type="image/jpeg">
         <!--Desktop Image-->
         <source media="(min-width: 1024px)" srcset="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 780, height: 752 })
+        "/assets/images/aboutus.jpg" | resize({ width: 780, height: 752 })
         | avif %}" type="image/avif"> <source media="(min-width: 1024px)"
-        srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width:
+        srcset="{% getUrl "/assets/images/aboutus.jpg" | resize({ width:
         780, height: 752 }) | webp %}" type="image/webp"> <source
         media="(min-width: 1024px)" srcset="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 780, height: 752 })
+        "/assets/images/aboutus.jpg" | resize({ width: 780, height: 752 })
         | jpeg %}" type="image/jpeg"> <img src="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 780, height: 752 })
+        "/assets/images/aboutus.jpg" | resize({ width: 780, height: 752 })
         | jpeg %}" alt="gavel" width="390" height="376" loading="lazy"
         decoding="async">
       </picture>
@@ -316,32 +316,32 @@ tags: "sitemap" # content/content.json will make sure that all pages in content/
       <picture class="cs-picture cs-picture2">
         <!--Mobile Image-->
         <source media="(max-width: 600px)" srcset="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 366, height: 354 })
+        "/assets/images/sliderpic.jpg" | resize({ width: 366, height: 354 })
         | avif %}" type="image/avif"> <source media="(max-width: 600px)"
-        srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width:
+        srcset="{% getUrl "/assets/images/sliderpic.jpg" | resize({ width:
         366, height: 354 }) | webp %}" type="image/webp"> <source
         media="(max-width: 600px)" srcset="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 366, height: 354 })
+        "/assets/images/sliderpic.jpg" | resize({ width: 366, height: 354 })
         | jpeg %}" type="image/jpeg">
         <!--Tablet Image-->
         <source media="(max-width: 1024px)" srcset="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 600, height: 578 })
+        "/assets/images/sliderpic.jpg" | resize({ width: 600, height: 578 })
         | avif %}" type="image/avif"> <source media="(max-width: 1024px)"
-        srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width:
+        srcset="{% getUrl "/assets/images/sliderpic.jpg" | resize({ width:
         600, height: 578 }) | webp %}" type="image/webp"> <source
         media="(max-width: 1024px)" srcset="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 600, height: 578 })
+        "/assets/images/sliderpic.jpg" | resize({ width: 600, height: 578 })
         | jpeg %}" type="image/jpeg">
         <!--Desktop Image-->
         <source media="(min-width: 1024px)" srcset="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 780, height: 752 })
+        "/assets/images/sliderpic.jpg" | resize({ width: 780, height: 752 })
         | avif %}" type="image/avif"> <source media="(min-width: 1024px)"
-        srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width:
+        srcset="{% getUrl "/assets/images/sliderpic.jpg" | resize({ width:
         780, height: 752 }) | webp %}" type="image/webp"> <source
         media="(min-width: 1024px)" srcset="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 780, height: 752 })
+        "/assets/images/sliderpic.jpg" | resize({ width: 780, height: 752 })
         | jpeg %}" type="image/jpeg"> <img src="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 780, height: 752 })
+        "/assets/images/sliderpic.jpg" | resize({ width: 780, height: 752 })
         | jpeg %}" alt="gavel" width="390" height="376" loading="lazy"
         decoding="async">
       </picture>
