--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -4,14 +4,20 @@ description: "Meta description for the page"
 permalink: "/contact/"
 ---
 
-{% extends "layouts/base.html" %} {% block head %}
+{% extends "layouts/base.html" %}
+{% block head %}
+<link rel="stylesheet" href="/assets/css/contact.css" />
 <link
-  rel="stylesheet"
-  href="/assets/css/contact.css" />
-<link rel="preload" as="image" href="{% getUrl "/assets/images/cabinets.jpg" |
-resize({ width: 640, height: 600 }) | avif %}"/> <link rel="preload" as="image"
-href="{% getUrl "/assets/images/construction.jpg" | resize({ width: 576, height:
-640 }) | avif %}"/> {% endblock %} {% block body %}
+  rel="preload"
+  as="image"
+  href="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 640, height: 600 }) | avif %}" />
+<link
+  rel="preload"
+  as="image"
+  href="{% getUrl "/assets/images/construction.jpg" | resize({ width: 576, height: 640 }) | avif %}" />
+{% endblock %}
+
+{% block body %}
 
 <!-- ============================================ -->
 <!--                   Banner                     -->
@@ -21,46 +27,58 @@ href="{% getUrl "/assets/images/construction.jpg" | resize({ width: 576, height:
   <div class="cs-container">
     <span class="cs-int-title">Contact Us</span>
     <div class="cs-breadcrumbs">
-      <a
-        href="/"
-        class="cs-link"
-        >Home</a
-      >
-      <a
-        href="/contact/"
-        class="cs-link cs-active"
-        >Contact Us</a
-      >
+      <a href="/" class="cs-link">Home</a>
+      <a href="/contact/" class="cs-link cs-active">Contact Us</a>
     </div>
   </div>
   <!--Background Image-->
   <picture class="cs-background">
     <!--Mobile Image-->
-    <source media="(max-width: 600px)" srcset="{% getUrl
-    "/assets/images/cabinets.jpg" | resize({ width: 640, height: 600 }) | avif
-    %}" type="image/avif"> <source media="(max-width: 600px)" srcset="{% getUrl
-    "/assets/images/cabinets.jpg" | resize({ width: 640, height: 600 }) | webp
-    %}" type="image/webp"> <source media="(max-width: 600px)" srcset="{% getUrl
-    "/assets/images/cabinets.jpg" | resize({ width: 640, height: 600 }) | jpeg
-    %}" type="image/jpeg">
+    <source
+      media="(max-width: 600px)"
+      srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 640, height: 600 }) | avif %}"
+      type="image/avif" />
+    <source
+      media="(max-width: 600px)"
+      srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 640, height: 600 }) | webp %}"
+      type="image/webp" />
+    <source
+      media="(max-width: 600px)"
+      srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 640, height: 600 }) | jpeg %}"
+      type="image/jpeg" />
     <!--Tablet Image-->
-    <source media="(max-width: 1024px)" srcset="{% getUrl
-    "/assets/images/cabinets.jpg" | resize({ width: 2048, height: 942 }) | avif
-    %}" type="image/avif"> <source media="(max-width: 1024px)" srcset="{% getUrl
-    "/assets/images/cabinets.jpg" | resize({ width: 2048, height: 942 }) | webp
-    %}" type="image/webp"> <source media="(max-width: 1024px)" srcset="{% getUrl
-    "/assets/images/cabinets.jpg" | resize({ width: 2048, height: 942 }) | jpeg
-    %}" type="image/jpeg">
+    <source
+      media="(max-width: 1024px)"
+      srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 2048, height: 942 }) | avif %}"
+      type="image/avif" />
+    <source
+      media="(max-width: 1024px)"
+      srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 2048, height: 942 }) | webp %}"
+      type="image/webp" />
+    <source
+      media="(max-width: 1024px)"
+      srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 2048, height: 942 }) | jpeg %}"
+      type="image/jpeg" />
     <!--Desktop Image-->
-    <source media="(min-width: 1024px)" srcset="{% getUrl
-    "/assets/images/cabinets.jpg" | resize({ width: 2500, height: 628 }) | avif
-    %}" type="image/avif"> <source media="(min-width: 1024px)" srcset="{% getUrl
-    "/assets/images/cabinets.jpg" | resize({ width: 2500, height: 628 }) | webp
-    %}" type="image/webp"> <source media="(min-width: 1024px)" srcset="{% getUrl
-    "/assets/images/cabinets.jpg" | resize({ width: 2500, height: 628 }) | jpeg
-    %}" type="image/jpeg"> <img src="{% getUrl "/assets/images/cabinets.jpg" |
-    resize({ width: 2500, height: 628 }) | jpeg %}" alt="library" width="1920"
-    height="482" loading="eager" decoding="async">
+    <source
+      media="(min-width: 1024px)"
+      srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 2500, height: 628 }) | avif %}"
+      type="image/avif" />
+    <source
+      media="(min-width: 1024px)"
+      srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 2500, height: 628 }) | webp %}"
+      type="image/webp" />
+    <source
+      media="(min-width: 1024px)"
+      srcset="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 2500, height: 628 }) | jpeg %}"
+      type="image/jpeg" />
+    <img
+      src="{% getUrl "/assets/images/cabinets.jpg" | resize({ width: 2500, height: 628 }) | jpeg %}"
+      alt="library"
+      width="1920"
+      height="482"
+      loading="eager"
+      decoding="async" />
   </picture>
 </div>
 
@@ -80,10 +98,24 @@ href="{% getUrl "/assets/images/construction.jpg" | resize({ width: 576, height:
           odio pulvinar. Sed ut.
         </p>
       </div>
+
+      <!-- Netlify Forms: same design, only attributes/hidden fields added -->
       <form
         id="cs-form-265"
         name="Contact Form"
-        method="post">
+        method="post"
+        data-netlify="true"
+        data-netlify-honeypot="bot-field">
+
+        <input type="hidden" name="form-name" value="Contact Form" />
+
+        <p style="display:none;">
+          <label>
+            Don’t fill this out:
+            <input name="bot-field" />
+          </label>
+        </p>
+
         <label>
           Name
           <input
@@ -93,6 +125,7 @@ href="{% getUrl "/assets/images/construction.jpg" | resize({ width: 576, height:
             name="name"
             placeholder="Name" />
         </label>
+
         <label>
           Email
           <input
@@ -102,6 +135,7 @@ href="{% getUrl "/assets/images/construction.jpg" | resize({ width: 576, height:
             name="email"
             placeholder="Email" />
         </label>
+
         <label>
           Phone
           <input
@@ -111,6 +145,7 @@ href="{% getUrl "/assets/images/construction.jpg" | resize({ width: 576, height:
             name="phone"
             placeholder="Phone" />
         </label>
+
         <label>
           How Did You Find Us
           <input
@@ -119,6 +154,7 @@ href="{% getUrl "/assets/images/construction.jpg" | resize({ width: 576, height:
             name="find-us"
             placeholder="How did you find us?" />
         </label>
+
         <label class="cs-label-message">
           Message
           <textarea
@@ -127,69 +163,79 @@ href="{% getUrl "/assets/images/construction.jpg" | resize({ width: 576, height:
             id="message-265"
             placeholder="Write message..."></textarea>
         </label>
-        <button
-          class="cs-button-solid cs-submit"
-          type="submit">
+
+        <button class="cs-button-solid cs-submit" type="submit">
           Submit Message
         </button>
       </form>
     </div>
+
     <div class="cs-right-section">
       <!--Email-->
       <span class="cs-header">Email</span>
-      <a
-        class="cs-link"
-        href="mailto:{{ client.email }}"
-        >{{ client.email }}</a
-      >
+      <a class="cs-link" href="mailto:{{ client.email }}">{{ client.email }}</a>
+
       <!--Phone-->
       <span class="cs-header">Phone</span>
-      <a
-        class="cs-link"
-        href="tel:{{ client.phoneForTel }}"
-        >{{ client.phoneFormatted }}</a
-      >
+      <a class="cs-link" href="tel:{{ client.phoneForTel }}">{{ client.phoneFormatted }}</a>
+
       <!--Address-->
       <span class="cs-header">Address</span>
-      <a
-        class="cs-link"
-        href="{{ client.address.mapLink }}">
+      <a class="cs-link" href="{{ client.address.mapLink }}">
         {{ client.address.lineOne }}, <br />
         {{ client.address.lineTwo }}, <br />
-        {{ client.address.city }}, {{ client.address.state }} {{
-        client.address.zip }}
+        {{ client.address.city }}, {{ client.address.state }} {{ client.address.zip }}
       </a>
+
       <!-- Background Image-->
       <picture class="cs-bg-picture">
         <!--Mobile Image-->
-        <source media="(max-width: 600px)" srcset="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 576, height: 640 })
-        | avif %}" type="image/avif"> <source media="(max-width: 600px)"
-        srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width:
-        576, height: 640 }) | webp %}" type="image/webp"> <source
-        media="(max-width: 600px)" srcset="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 576, height: 640 })
-        | jpeg %}" type="image/jpeg">
+        <source
+          media="(max-width: 600px)"
+          srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width: 576, height: 640 }) | avif %}"
+          type="image/avif" />
+        <source
+          media="(max-width: 600px)"
+          srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width: 576, height: 640 }) | webp %}"
+          type="image/webp" />
+        <source
+          media="(max-width: 600px)"
+          srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width: 576, height: 640 }) | jpeg %}"
+          type="image/jpeg" />
+
         <!--Tablet Image-->
-        <source media="(max-width: 1024px)" srcset="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 820, height: 1372 })
-        | avif %}" type="image/avif"> <source media="(max-width: 1024px)"
-        srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width:
-        820, height: 1372 }) | webp %}" type="image/webp"> <source
-        media="(max-width: 1024px)" srcset="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 820, height: 1372 })
-        | jpeg %}" type="image/jpeg">
+        <source
+          media="(max-width: 1024px)"
+          srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width: 820, height: 1372 }) | avif %}"
+          type="image/avif" />
+        <source
+          media="(max-width: 1024px)"
+          srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width: 820, height: 1372 }) | webp %}"
+          type="image/webp" />
+        <source
+          media="(max-width: 1024px)"
+          srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width: 820, height: 1372 }) | jpeg %}"
+          type="image/jpeg" />
+
         <!--Desktop Image-->
-        <source media="(min-width: 1024px)" srcset="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 1084, height: 1156
-        }) | avif %}" type="image/avif"> <source media="(min-width: 1024px)"
-        srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width:
-        1084, height: 1156 }) | webp %}" type="image/webp"> <source
-        media="(min-width: 1024px)" srcset="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 1084, height: 1156
-        }) | jpeg %}" type="image/jpeg"> <img src="{% getUrl
-        "/assets/images/construction.jpg" | resize({ width: 1084, height: 1156
-        }) | jpeg %}" alt="building" width="542" height="578" decoding="async">
+        <source
+          media="(min-width: 1024px)"
+          srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width: 1084, height: 1156 }) | avif %}"
+          type="image/avif" />
+        <source
+          media="(min-width: 1024px)"
+          srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width: 1084, height: 1156 }) | webp %}"
+          type="image/webp" />
+        <source
+          media="(min-width: 1024px)"
+          srcset="{% getUrl "/assets/images/construction.jpg" | resize({ width: 1084, height: 1156 }) | jpeg %}"
+          type="image/jpeg" />
+        <img
+          src="{% getUrl "/assets/images/construction.jpg" | resize({ width: 1084, height: 1156 }) | jpeg %}"
+          alt="building"
+          width="542"
+          height="578"
+          decoding="async" />
       </picture>
     </div>
   </div>
