compressed images and changed projects

--- a/src/content/pages/project-one.html
+++ b/src/content/pages/project-one.html
@@ -1,7 +1,7 @@
 ---
 title: "Project One | Coastal Edge Landscaping"
 description: "Meta description for the page"
-permalink: "/project-one/"
+permalink: "/2025-projects/"
 ---
 
 {% extends "layouts/base.html" %} {% block head %}
@@ -16,7 +16,7 @@ permalink: "/project-one/"
 
 <div id="banner-310">
   <div class="cs-container">
-    <span class="cs-int-title">Project One Gallery</span>
+    <span class="cs-int-title">2025 Projects</span>
     <div class="cs-breadcrumbs">
       <a
         href="/"
@@ -26,7 +26,7 @@ permalink: "/project-one/"
       <a
         href="/project-one/"
         class="cs-link cs-active"
-        >Project One Gallery</a
+        >2025 Projects</a
       >
     </div>
   </div>
@@ -71,7 +71,7 @@ permalink: "/project-one/"
     <div class="cs-content">
       <span class="cs-topper">Our Portfolio</span>
       <h2 class="cs-title">
-        Et orci volutpat, back up generator installations
+       Projects completed in 2025
       </h2>
     </div>
     <div class="cs-image-group">
