--- a/src/content/pages/project-two.html
+++ b/src/content/pages/project-two.html
@@ -1,7 +1,7 @@
 ---
 title: "Project Two | Costal Edge Landscaping"
 description: "Meta description for the page"
-permalink: "/project-two/"
+permalink: "/2024-projects/"
 ---
 
 {% extends "layouts/base.html" %} {% block head %}
@@ -16,7 +16,7 @@ permalink: "/project-two/"
 
 <div id="banner-310">
   <div class="cs-container">
-    <span class="cs-int-title">Project Two Gallery</span>
+    <span class="cs-int-title">2024 Projects</span>
     <div class="cs-breadcrumbs">
       <a
         href="/"
@@ -26,7 +26,7 @@ permalink: "/project-two/"
       <a
         href="/project-two/"
         class="cs-link cs-active"
-        >Project Two Gallery</a
+        >2024 Projects</a
       >
     </div>
   </div>
@@ -71,7 +71,7 @@ permalink: "/project-two/"
     <div class="cs-content">
       <span class="cs-topper">Our Portfolio</span>
       <h2 class="cs-title">
-        Et orci volutpat, back up generator installations
+      Projects completed in 2024
       </h2>
     </div>
     <div class="cs-image-group">
