--- a/src/index.html
+++ b/src/index.html
@@ -374,7 +374,7 @@ tags: "sitemap" # content/content.json will make sure that all pages in content/
       </p>
 
       <a
-        href="/services/"
+        href="/"
         class="cs-button-solid">
         View Our Services
       </a>
@@ -699,7 +699,7 @@ tags: "sitemap" # content/content.json will make sure that all pages in content/
       </div>
     </div>
     <a
-      href="/project-one/"
+      href="/2025-projects/"
       class="cs-button-solid"
       >View a Project</a
     >
