--- a/src/content/pages/contact.html
+++ b/src/content/pages/contact.html
@@ -86,9 +86,8 @@ permalink: "/contact/"
         <span class="cs-topper">Contact</span>
         <h2 class="cs-title">Get in Touch</h2>
         <p class="cs-text">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ridiculus
-          elementum ullamcorper ipsum porttitor aliquam. Id magna urna ultrices
-          odio pulvinar. Sed ut.
+                 Coastal Edge Landscaping delivers quality outdoor spaces built to last. From clean, functional designs to expert construction, we make it easy to transform your yard into something you’re proud of.
+
         </p>
       </div>
 
